@@ -1,6 +1,6 @@
 smartmontools NEWS
 ------------------
-$Id: NEWS 3904 2014-06-15 14:21:15Z chrfranke $
+$Id: NEWS 3921 2014-06-22 19:52:51Z chrfranke $
 
 The most up-to-date version of this file is:
 http://sourceforge.net/p/smartmontools/code/HEAD/tree/trunk/smartmontools/NEWS
@@ -9,6 +9,7 @@ Date <Not released yet, please try current SVN>
 Summary: smartmontools release 6.3
 -----------------------------------------------------------
 - smartctl: Fixed bogus error messages from '-g/-s wcreorder'.
+- smartctl prints ATA form factor.
 - SCSI: Improved support of modern disks (SAS SSDs).
 - SCSI: Fixed sense data noise from old disks.
 - configure option '--with-systemdenvfile'.
